--- a/resources/css/material-palenight.css
+++ b/resources/css/material-palenight.css
@@ -8,10 +8,10 @@
 pre code.hljs {
     display: block;
     overflow-x: auto;
-    padding: 1em;
+    /* padding: 1em; */
 }
 code.hljs {
-    padding: 3px 5px;
+    /* padding: 3px 5px; */
 }
 .hljs {
     color: #959dcb;
